tests/baselines/reference/privacyCheckTypeOfInvisibleModuleError.errors.txt
==== tests/cases/compiler/privacyCheckTypeOfInvisibleModuleError.ts (1 errors) ====
    module Outer {
        module Inner {
            export var m: typeof Inner;
        }
    
        export var f: typeof Inner;
                   ~~~~~~~~~~~~~~~
!!! error TS2031: Exported variable 'f' is using inaccessible module 'Inner'.
    }
    